Back up server-only MinePilot with verified follow and Numen integration
Preserve the production JAR, native player controllers, 150-block perception, survival tools, source licenses and validation records. Vanilla protocol login and marking were verified on the exact included binary. The remaining migration and experience limits are documented; this is a recovery snapshot, not an all-feature completion claim.